--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "lucide-react": "^0.525.0",
+    "nanoid": "^3.3.11",
     "next": "15.1.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "nanoid": "^3.3.11"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^3.9.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
